fixed spacing issue on games page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,12 @@ html {
   gap: 1rem;
 }
 
+.linkbox div {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem
+}
+
 .blogEntry {
   display: flex;
   flex-direction: column;
